[Theme][Bugfix] dark_paper:  Sidebar contents could be hidden by overlapping footer area

--- a/themes/dark_paper/less/header.less
+++ b/themes/dark_paper/less/header.less
@@ -56,6 +56,7 @@ form.search {
 	padding: 40px 30px;
 	position: fixed;
 	top: 0;
+	z-index: 1;
 
 	.about-page-link {
 		img {
